# docs/swagger.json
@@ -25,9 +25,23 @@
                     "application/json"
                 ],
                 "summary": "Valida posicion de nave",
+                "parameters": [
+                    {
+                        "description": "Save Satellite Data",
+                        "name": "satelliteData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/spaceModels.Satellites"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ReponseTopsecretFormat"
+                        }
                     }
                 }
             }
@@ -44,7 +58,10 @@
                 "summary": "Valida posicion de nave",
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ReponseTopsecretFormat"
+                        }
                     }
                 }
             },
@@ -57,9 +74,78 @@
                     "application/json"
                 ],
                 "summary": "Guarda en cache datos por cada satelite",
+                "parameters": [
+                    {
+                        "description": "Save Satellite Data",
+                        "name": "satelliteData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/spaceModels.Satellite"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "helpers.ReponsePositionFormat": {
+            "type": "object",
+            "properties": {
+                "x": {
+                    "type": "number"
+                },
+                "y": {
+                    "type": "number"
+                }
+            }
+        },
+        "helpers.ReponseTopsecretFormat": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "position": {
+                    "$ref": "#/definitions/helpers.ReponsePositionFormat"
+                }
+            }
+        },
+        "spaceModels.Satellite": {
+            "type": "object",
+            "properties": {
+                "coords": {
+                    "type": "array",
+                    "items": {
+                        "type": "number"
+                    }
+                },
+                "distance": {
+                    "type": "number"
+                },
+                "message": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "spaceModels.Satellites": {
+            "type": "object",
+            "properties": {
+                "satellites": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/spaceModels.Satellite"
                     }
                 }
             }
